--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
             <div class="song-card">
                 <img 
                     class="cover" 
-                    src="song3mod.jpg"
+                    src="song3.jpg"
                     alt="album cover"
                 >
                 <div class="info">
-                    <h2>재</h2>
-                    <p>한로로</p>
+                    <h2>GROWING UP IS _____</h2>
+                    <p>Ruel</p>
 
                     <!-- ⭐ 여기 설명 입력 -->
                     <p class="desc">
-                        음악의 악기가 하나씩 추가되는 부분에서 희열을 느낄 수 있으며 노래 가사의 의미가 좋은 곡이다.
+                        위로받는 기분이드는 노래이다.
                     </p>
 
                     <a 
                         class="btn"
-                        href="https://youtu.be/C77DJ8nySoo?si=7azo-_y3fTSFSoor"
+                        href="https://www.youtube.com/watch?v=YJ3KDs33ItI"
                         target="_blank"
                     >유튜브에서 듣기</a>
                 </div>
@@ -95,3 +95,4 @@
     </div>
 </body>
 </html>
+
