index.html 내용 수정

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
             <div class="song-card">
                 <img 
                     class="cover" 
-                    src="song2.jpg"
+                    src="여름깃.jpg"
                     alt="album cover"
                 >
                 <div class="info">
-                    <h2>Sunflower</h2>
-                    <p>Post Malone</p>
+                    <h2>여름깃</h2>
+                    <p>새소년</p>
 
                     <!-- ⭐ 여기 설명 입력 -->
                     <p class="desc">
-                        밝고 긍정적인 기운을 주는 노래이다.
+                        한여름의 밝고 긍정적인 기분을 느낄수 있는 곡이다.
                     </p>
 
                     <a 
                         class="btn"
-                        href="https://www.youtube.com/watch?v=ApXoWvfEYVU"
+                        href="https://youtu.be/CosFZpLpPfc?si=2X2ZrPv4Yg-w6L24"
                         target="_blank"
                     >유튜브에서 듣기</a>
                 </div>
